--- a/src/View/home.html.twig
+++ b/src/View/home.html.twig
@@ -11,7 +11,7 @@
 <body>
     <h1>Hello {{ name }} !</h1>
 {% block content %}{% endblock %}
-{% include 'footer.html.twig' %}
+{% include 'components/footer.html.twig' %}
 
 </body>
 </html>
